--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "reactpractice",
-  "private": true,
+  "name": "R.Z Portofolio",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://RahmatullahZadran.github.io/R.Z-Portofolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -24,6 +27,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.1.1",
     "vite": "^4.4.5"
   }
 }
+
