--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "R.Z Portofolio",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://RahmatullahZadran.github.io/R.Z-Portofolio",
